fix: center align the 'load more' button

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,6 +19,8 @@
 
 .tableContainer {
     padding-bottom: calc(gridBaseline * 2);
+    display: flex;
+    flex-direction: column;
 }
 
 .tableScrollContainer {
